--- a/jaleApp/src/main/resources/templates/passenger/passenger.html
+++ b/jaleApp/src/main/resources/templates/passenger/passenger.html
@@ -87,7 +87,25 @@
 						<a class="collapse-item" th:href="@{/states/list}">Estado de Viaje</a>						
 
 				</div>
+				</div>
+				
 				</div>		
+				
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/users/list}">Users</a>						
+
+				</div>
+				</div>
+				
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/roles/list}">Roles</a>						
+
+				</div>
+				</div>							
 					</li>
 
 			<!-- Sidebar Toggler (Sidebar) -->
